# prinsight

./: .gitignore  CMakeLists.txt  README.md  build_linux64.sh
build-scripts/: android-setup.sh  build-amcl.sh  build-android.sh  build-cifer.sh  build-gmp.sh  build-libsodium.sh  build-linux64.sh  build.sh  cifer.cmake  prepare-build.sh  utils.sh
client/: CMakeLists.txt
client/source/: main.cpp
documentation/: CMakeLists.txt
include/prinsight/: core.hpp  prinsight.h  prinsight.hpp  status.hpp
server/: CMakeLists.txt
server/source/: main.cpp
source/: DMCFE.cpp  DMCFEncryptor.cpp  DecMultiClientIPFuncEnc.cpp  SampleApp.cpp  Utils.cpp  core.cpp  status.cpp
source/dmcfe/: DMCFDecryptor.cpp  DMCFE.cpp  DMCFEncryptor.cpp  Utils.cpp  dmcfe.cpp  dmcfe_decryptor.cpp  dmcfe_encryptor.cpp  utils.cpp
source/dmcfe/include/: DMCFDecryptor.hpp  DMCFE.hpp  DMCFEncryptor.hpp  Utils.hpp  dmcfe.hpp  dmcfe_decryptor.hpp  dmcfe_encryptor.hpp  utils.hpp
source/include/: DMCFDecryptor.hpp  DMCFE.hpp  DMCFEncryptor.hpp  Utils.hpp
source/models/: analytics_data_model.hpp  client_public_data_model.hpp  client_registration_model.hpp  scheme_params_model.hpp
test/: CMakeLists.txt
test/source/: e2e_tests.cpp  nominal.cpp
